# typst-languagetool

./: Cargo.toml  LICENSE  build.rs  justfile  pom.xml  readme.md  rustfmt.toml  test.typ
cli/: Cargo.toml
cli/src/: main.rs  output.rs
editors/helix/: languages.toml  typst-languagetool.json
editors/nvim/: typst.lua
editors/vscodium/generic-lsp/: generic-lsp-0.0.1.vsix  package-lock.json  package.json
editors/vscodium/generic-lsp/example/: test.typ
editors/vscodium/generic-lsp/src/: extension.ts
example/: .typst-languagetool.json  content_block.typ  ignore.typ  lt.typ  main.typ  other.typ
lsp/: Cargo.toml
lsp/src/: main.rs
lt-world/: Cargo.toml
lt-world/src/: fonts.rs  lib.rs  package.rs
maven/: assembly.xml  language-module.properties  pom.xml
src/: convert.rs  languagetool.rs  lib.rs  main.rs  output.rs  rules.rs  text_builder.rs
src/backends/: harper.rs  jni.rs  mod.rs  remote.rs
src/jni/: mod.rs  text_builder.rs
src/remote/: mod.rs
