[package]
name = "typst-languagetool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
typst.workspace = true
jni = { workspace = true, optional = true }
anyhow.workspace = true
languagetool-rust = { workspace = true, optional = true }

[workspace]
members = [".", "cli", "lsp", "lt-world"]

[features]
default = []
bundle-jar = ["dep:jni"]
extern-jar = ["dep:jni"]
remote-server = ["dep:languagetool-rust"]


[workspace.dependencies]
typst-languagetool = { path = "." }
lt-world = { path = "./lt-world" }

annotate-snippets = "0.11.0"
clap = { version = "4.3.21", features = ["derive"] }
notify = "6.0.1"
notify-debouncer-mini = "0.4.1"
serde = "1.0.183"
serde_json = "1.0.104"
typst = "0.11.0"
jni = { version = "0.21.1", features = ["invocation"] }
serde_ignored = "0.1.10"
anyhow = "1.0.71"
languagetool-rust = "2.1.4"
tokio = { version = "1.37.0", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
comemo = "0.4.0"
chrono = "0.4.38"
dirs = "5.0.1"
typst-assets = { version = "0.11.0", features = ["fonts"] }
fontdb = "0.16.2"
colored = "2.1.0"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
crossbeam-channel = "0.5.12"
humantime-serde = "1.1.1"
