[package]
name = "typst-languagetool"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
typst.workspace = true
jni = { workspace = true, optional = true }
anyhow.workspace = true
languagetool-rust = { workspace = true, optional = true }

[dev-dependencies]
lt-world.workspace = true

[workspace]
members = [".", "cli", "lsp", "lt-world"]

[workspace.package]
version = "0.3.0"
edition = "2024"

[features]
default = []
bundle = ["dep:jni"]
jar = ["dep:jni"]
server = ["dep:languagetool-rust"]


[workspace.dependencies]
typst-languagetool = { path = "." }
lt-world = { path = "./lt-world" }

typst = "0.14.2"
typst-kit = { version = "0.14.2", features = ["embed-fonts"] }

annotate-snippets = "0.12.4"
clap = { version = "4.5.48", features = ["derive"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
serde = "1.0.183"
serde_json = "1.0.104"
jni = { version = "0.21.1", features = ["invocation"] }
serde_ignored = "0.1.10"
anyhow = "1.0.100"
languagetool-rust = "3.0.0"
tokio = { version = "1.47.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
chrono = "0.4.42"
dirs = "6.0.0"
colored = "3.0.0"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.15"
humantime-serde = "1.1.1"
percent-encoding = "2.3.2"
