[package]
name = "cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typst-languagetool"
path = "src/main.rs"

[features]
default = []
bundle = ["typst-languagetool/bundle"]
jar = ["typst-languagetool/jar"]
server = ["typst-languagetool/server"]


[dependencies]
typst-languagetool.workspace = true

notify.workspace = true
notify-debouncer-mini.workspace = true
clap.workspace = true
annotate-snippets.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
lt-world.workspace = true
typst.workspace = true
colored.workspace = true
