[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typst-languagetool-lsp"
path = "src/main.rs"

[dependencies]
typst-languagetool.workspace = true

lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
