[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typst-languagetool-lsp"
path = "src/main.rs"

[features]
default = []
bundle-jar = ["typst-languagetool/bundle-jar"]
extern-jar = ["typst-languagetool/extern-jar"]
remote-server = ["typst-languagetool/remote-server"]


[dependencies]
typst-languagetool.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_ignored.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["io-std"] }
tower-lsp.workspace = true
