[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "typst-languagetool-lsp"
path = "src/main.rs"

[features]
default = []
bundle = ["typst-languagetool/bundle"]
jar = ["typst-languagetool/jar"]
server = ["typst-languagetool/server"]


[dependencies]
typst-languagetool.workspace = true
lt-world.workspace = true

typst.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_ignored.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["io-std"] }
lsp-server.workspace = true
lsp-types.workspace = true
crossbeam-channel.workspace = true
humantime-serde.workspace = true
