[package]
name = "lt-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst.workspace = true
comemo.workspace = true
chrono.workspace = true
dirs.workspace = true
typst-assets.workspace = true
fontdb.workspace = true
